[#965] Add more tests for JFR and MBeanServerConnection.invoke()