@@ -15,12 +15,16 @@
  */
 package org.jolokia.client.jmxadapter;
 
+import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.lang.management.ManagementFactory;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.text.ParseException;
 import java.time.Duration;
+import java.time.Instant;
+import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import javax.management.JMX;
 import javax.management.MBeanInfo;
@@ -40,20 +44,66 @@ import javax.management.remote.JMXServiceURL;
 import jdk.jfr.Configuration;
 import jdk.jfr.Recording;
 import jdk.jfr.consumer.RecordingStream;
+import jdk.management.jfr.ConfigurationInfo;
 import jdk.management.jfr.FlightRecorderMXBean;
 import jdk.management.jfr.RemoteRecordingStream;
-import org.testng.annotations.Ignore;import org.testng.annotations.Test;
+import org.jolokia.jvmagent.JolokiaServer;
+import org.jolokia.jvmagent.JolokiaServerConfig;
+import org.jolokia.test.util.EnvTestUtil;
+import org.testng.SkipException;
+import org.testng.annotations.AfterClass;
+import org.testng.annotations.BeforeClass;
+import org.testng.annotations.Ignore;
+import org.testng.annotations.Test;
 
 import static org.testng.Assert.assertNotNull;
+import static org.testng.Assert.assertTrue;
 
 /**
- * This test shows how to use JFR API directly from Java code
+ * This test shows how to use JFR API directly from Java code. Most of the tests are ignored - the purpose
+ * is the API showcase, not actually using JFR.
  */
-@Ignore("Manual test showing JFR API usage")
 public class JfrApiTest {
 
+    private JolokiaServer server;
+    private MBeanServer platform;
+
+    JMXConnector connector;
+
+    private ObjectName jfr;
+
+    @BeforeClass
+    public void startJVMAgent() throws Exception {
+        int port = EnvTestUtil.getFreePort();
+        JolokiaServerConfig config = new JolokiaServerConfig(Map.of(
+            "port", Integer.toString(port),
+            "debug", "false"
+        ));
+        server = new JolokiaServer(config);
+        server.start(false);
+
+        platform = ManagementFactory.getPlatformMBeanServer();
+
+        jfr = ObjectName.getInstance(FlightRecorderMXBean.MXBEAN_NAME);
+
+        if (!platform.isRegistered(jfr)) {
+            throw new SkipException("JFR MBean not registered: " + jfr);
+        }
+
+        JMXServiceURL serviceURL = new JMXServiceURL("jolokia+http", "127.0.0.1", port, "/jolokia");
+        connector = JMXConnectorFactory.connect(serviceURL);
+    }
+
+    @AfterClass
+    public void stopJVMAgent() throws IOException {
+        connector.close();
+        server.stop();
+    }
+
+    // ---- Tests using JFR API without JMX
+
     /**
-     * An equivalent of:<ul>
+     * Low level - deal with {@link Recording} directly. An equivalent of:<ul>
      *     <li>{@code jcmd <pid> JFR.start} + {@code jcmd <pid> JFR.dump} + {@code jcmd <pid> JFR.stop}</li>
      *     <li>{@code jdk.jfr.internal.dcmd.DCmdStart#execute()}</li>
      * </ul>
@@ -63,56 +113,85 @@ public class JfrApiTest {
      * @throws InterruptedException
      */
     @Test
-    public void startDumpAndStopRecording() throws IOException, ParseException, InterruptedException {
+    @Ignore
+    public void startStopAndDumpRecording() throws IOException, ParseException, InterruptedException {
         Configuration c = Configuration.getConfiguration("default");
         try (Recording r = new Recording(c)) {
             r.start();
             System.gc();
-            Thread.sleep(5000);
+            Thread.sleep(300);
             r.stop();
-            r.dump(Files.createTempFile("my-recording", ".jfr"));
-            System.out.println("dump file created");
+            Path file = Files.createTempFile("my-recording", ".jfr");
+            // this is what Recording is for - to dump data.
+            r.dump(file);
+            System.out.println("dump file created: " + file.toFile().getAbsolutePath() + " (size: " +  file.toFile().length() + ")");
         }
     }
 
     /**
-     * {@link RecordingStream} holds a reference to a {@link Recording}.
-     * A recording stream produces events from the current JVM (Java Virtual Machine).
+     * {@link RecordingStream} holds a reference to a {@link Recording}, so it can eventually {@link RecordingStream#dump(Path)}
+     * the events, but mostly it's used to subscribe to events. A {@link RecordingStream} produces events from the
+     * current JVM (Java Virtual Machine).
+     *
      * @throws IOException
      * @throws ParseException
      */
     @Test
-    public void recordingStream() throws IOException, ParseException {
+    @Ignore
+    public void recordingStream() throws IOException, ParseException, InterruptedException {
         Configuration c = Configuration.getConfiguration("default");
         try (RecordingStream rs = new RecordingStream(c)) {
+            // when calling enable() here, in jdk.jfr.internal.PlatformRecording.setSetting() I already
+            // see 131 enabled events and 40 disabled events
+            rs.enable("jdk.CPULoad").withPeriod(Duration.ofMillis(200));
             rs.onEvent("jdk.GarbageCollection", System.out::println);
             rs.onEvent("jdk.CPULoad", System.out::println);
             rs.onEvent("jdk.JVMInformation", System.out::println);
-            rs.start();
+            rs.startAsync();
+            Thread.sleep(1000);
+            Path file = Files.createTempFile("my-recording", ".jfr");
+            // RecordingStream is mostly for observing events, but dump works too:
+            // Without dump() you’d need:
+            //  - one RecordingStream for live events
+            //  - one Recording for dumping
+            // this is fine for RecordingStream when the file exists:
+            //    at jdk.jfr.internal.WriteableUserPath.<init>(WriteableUserPath.java:73)
+            //    at jdk.jfr.Recording.dump(Recording.java:387)
+            //    at jdk.jfr.consumer.RecordingStream.dump(RecordingStream.java:441)
+            //      - locked <0x1389> (a jdk.jfr.internal.PlatformRecorder)
+            //    at org.jolokia.client.jmxadapter.JfrApiTest.recordingStream(JfrApiTest.java:154)
+            rs.dump(file);
+            System.out.println("dump file created: " + file.toFile().getAbsolutePath() + " (size: " +  file.toFile().length() + ")");
         }
     }
 
+    // ---- Tests using JFR API with JMX used internally
+
     /**
-     * {@link RecordingStream} holds a reference to a {@link Recording}.
-     * A recording stream produces events from the current JVM (Java Virtual Machine).
+     * {@link RemoteRecordingStream} can be used for remote monitoring after passing {@link MBeanServerConnection}.
+     * Internally it uses {@link FlightRecorderMXBean} - remote or local.
+     *
      * @throws IOException
-     * @throws ParseException
      */
     @Test
-    public void remoteRecordingStream() throws IOException, ParseException, InterruptedException {
-        Configuration c = Configuration.getConfiguration("default");
+    @Ignore
+    public void remoteRecordingStream() throws IOException, InterruptedException {
         // RemoteRecordingStream constructor does:
         // - javax.management.JMX.newMXBeanProxy() for jdk.management.jfr.FlightRecorderMXBean
         // - jdk.management.jfr.FlightRecorderMXBean.newRecording()
         // - jdk.management.jfr.FlightRecorderMXBean.setRecordingOptions("name", ...)
         // - creates stream = jdk.jfr.internal.consumer.EventDirectoryStream
         // - creates jdk.management.jfr.DiskRepository
-        try (RemoteRecordingStream rs = new RemoteRecordingStream(ManagementFactory.getPlatformMBeanServer())) {
+        try (RemoteRecordingStream rs = new RemoteRecordingStream(platform)) {
             // rs.onEvent -> jdk.jfr.consumer.EventStream.onEvent()
+            // looks like without enable(), RemoteRecordingStream doesn't get any events - unlike
+            // as with RecordingStream. Here, this call leads to jdk.jfr.internal.PlatformRecording.setSettings()
+            // call via JMX (with full state), and the jdk.jfr.internal.PlatformRecording.settings is an empty map
+            rs.enable("jdk.CPULoad").withPeriod(Duration.ofMillis(200));
             rs.onEvent("jdk.GarbageCollection", System.out::println);
             rs.onEvent("jdk.CPULoad", System.out::println);
             rs.onEvent("jdk.JVMInformation", System.out::println);
-            // jdk.jfr.consumer.EventStream.startAsync
+            // jdk.jfr.consumer.EventStream.startAsync is asynchronous
             // jdk.management.jfr.FlightRecorderMXBean.startRecording()
             // starts jdk.management.jfr.DownLoadThread, which calls:
             // 1x jdk.management.jfr.FlightRecorderMXBean.openStream
@@ -125,19 +204,26 @@ public class JfrApiTest {
             // 1x jdk.management.jfr.FlightRecorderMXBean.openStream
             // loop: jdk.management.jfr.FlightRecorderMXBean.readStream + jdk.management.jfr.DiskRepository.write
             // jdk.jfr.internal.consumer.EventDirectoryStream.process() in a thread
-            rs.start();
-            Thread.sleep(1000);
-            rs.dump(Paths.get("/tmp/jolokia-" + System.nanoTime() + ".jfr"));
+//            rs.start();
+            Thread.sleep(300);
+            // RemoteRecordingStream.dump() fails with existing file:
+            //    at jdk.management.jfr.FileDump.write(FileDump.java:89)
+            //    at jdk.management.jfr.RemoteRecordingStream.dump(RemoteRecordingStream.java:610)
+            //    at org.jolokia.client.jmxadapter.JfrApiTest.remoteRecordingStream(JfrApiTest.java:202)
+            Path file = Path.of(System.getProperty("java.io.tmpdir"), System.nanoTime() + ".jfr");
+            rs.dump(file);
+            assertTrue(file.toFile().length() > 0);
+//            System.out.println("dump file created: " + file.toFile().getAbsolutePath() + " (size: " +  file.toFile().length() + ")");
         }
-        System.out.println("finish");
     }
 
+    // ---- Tests using JFR API through jdk.management.jfr:type=FlightRecorder MBean and local MBeanServer
+    //      https://openjdk.org/jeps/349
+
     @Test
+    @Ignore
     public void startDumpAndStopRecordingUsingJMX() throws Exception {
-        MBeanServer server = ManagementFactory.getPlatformMBeanServer();
-        ObjectName jfrMBeanName = ObjectName.getInstance("jdk.management.jfr:type=FlightRecorder");
-        MBeanInfo info = server.getMBeanInfo(jfrMBeanName);
-        System.out.println(info);
+        MBeanInfo info = platform.getMBeanInfo(jfr);
 
         TabularType type = null;
         for (MBeanOperationInfo op : info.getOperations()) {
@@ -151,92 +237,162 @@ public class JfrApiTest {
         }
 
         assertNotNull(type);
-
-        long id = (long) server.invoke(jfrMBeanName, "newRecording", new Object[0], new String[0]);
-        server.invoke(jfrMBeanName, "startRecording", new Object[] { id }, new String[] { "long" });
-        Thread.sleep(1000);
-        server.invoke(jfrMBeanName, "stopRecording", new Object[] { id }, new String[] { "long" });
         TabularDataSupport td = new TabularDataSupport(type);
-        // three ways of adding "rows"
+
+        long id = (long) platform.invoke(jfr, "newRecording", new Object[0], new String[0]);
+        long start = Instant.now().minusSeconds(1).toEpochMilli();
+        platform.invoke(jfr, "startRecording", new Object[] { id }, new String[] { "long" });
+        Thread.sleep(300);
+        platform.invoke(jfr, "stopRecording", new Object[] { id }, new String[] { "long" });
+        long end = Instant.now().toEpochMilli();
+
+        long cloneId = (long) platform.invoke(jfr, "cloneRecording", new Object[] { id, true }, new String[] { "long", "boolean" });
+
+        // jdk.management.jfr.FlightRecorderMXBean.openStream() accepts long and a Map. The Map should
+        // be passed as TabularData and there are three ways of adding "rows"
+        // 1. put(CompositeData) easy way - CompositeDataSupport with a Map
 //        td.put(new CompositeDataSupport(type.getRowType(), Map.of("key", "streamVersion", "value", "1.0")));
 //        td.put(new CompositeDataSupport(type.getRowType(), Map.of("key", "asd", "value", "dsa")));
-        td.put("streamVersion", new CompositeDataSupport(type.getRowType(), new String[] { "key", "value" }, new Object[] { "streamVersion", "1.0" }));
-        td.put("asd", new CompositeDataSupport(type.getRowType(), new String[] { "key", "value" }, new Object[] { "asd", "dsa" }));
+        // 2. put(CompositeData) mid-level way - CompositeDataSupport with item names and item values
 //        td.put(new CompositeDataSupport(type.getRowType(), new String[] { "key", "value" }, new Object[] { "streamVersion", "1.0" }));
 //        td.put(new CompositeDataSupport(type.getRowType(), new String[] { "key", "value" }, new Object[] { "asd", "dsa" }));
-        long stream = (long) server.invoke(jfrMBeanName, "openStream", new Object[] { id, td }, new String[] { "long", "javax.management.openmbean.TabularData" });
-        byte[] dump = (byte[]) server.invoke(jfrMBeanName, "readStream", new Object[] { stream }, new String[] { "long" });
-        server.invoke(jfrMBeanName, "closeStream", new Object[] { stream }, new String[] { "long" });
-        server.invoke(jfrMBeanName, "closeRecording", new Object[] { id }, new String[] { "long" });
+        // 3. put(index values, CompositeData) - as above, but specifying the index separately
+//        td.put("streamVersion", new CompositeDataSupport(type.getRowType(), new String[] { "key", "value" }, new Object[] { "streamVersion", "1.0" }));
+//        td.put("asd", new CompositeDataSupport(type.getRowType(), new String[] { "key", "value" }, new Object[] { "asd", "dsa" }));
+//        td.put("startTime", new CompositeDataSupport(type.getRowType(), new String[] { "key", "value" }, new Object[] { "startTime", Long.toString(start) }));
+//        td.put("endTime", new CompositeDataSupport(type.getRowType(), new String[] { "key", "value" }, new Object[] { "endTime", Long.toString(end) }));
+        // now we can pass the TabularData to a call
+        long stream = (long) platform.invoke(jfr, "openStream", new Object[] { cloneId, td }, new String[] { "long", "javax.management.openmbean.TabularData" });
 
-        System.out.println("dump size: " + dump.length);
+        byte[] dump;
+        int size = 0;
+        while ((dump = (byte[]) platform.invoke(jfr, "readStream", new Object[] { stream }, new String[] { "long" })) != null) {
+            size += dump.length;
+        }
+        platform.invoke(jfr, "closeStream", new Object[] { stream }, new String[] { "long" });
+        platform.invoke(jfr, "closeRecording", new Object[] { cloneId }, new String[] { "long" });
+
+        assertTrue(size > 0);
     }
 
     @Test
-    public void startDumpAndStopRecordingUsingJMXProxy() throws Exception {
-        MBeanServer server = ManagementFactory.getPlatformMBeanServer();
-        ObjectName jfrMBeanName = ObjectName.getInstance("jdk.management.jfr:type=FlightRecorder");
-        MBeanInfo info = server.getMBeanInfo(jfrMBeanName);
-
-        FlightRecorderMXBean jfr = JMX.newMXBeanProxy(server, jfrMBeanName, FlightRecorderMXBean.class);
+    @Ignore
+    public void remoteRecordingStreamWithPlatformServerAndJMXProxy() throws Exception {
+        FlightRecorderMXBean jfr = JMX.newMXBeanProxy(ManagementFactory.getPlatformMBeanServer(), this.jfr, FlightRecorderMXBean.class);
         long id = jfr.newRecording();
         jfr.startRecording(id);
-        Thread.sleep(1000);
+        Thread.sleep(500);
         jfr.stopRecording(id);
         // com.sun.jmx.mbeanserver.DefaultMXBeanMappingFactory.TabularMapping.toNonNullOpenValue() will convert
         // a map to proper CompositeType associated with TabularType
         // com.sun.jmx.mbeanserver.DefaultMXBeanMappingFactory.keyValueArray is ALWAYS [ "key", "value" ]
-        long stream = jfr.openStream(id, Map.of("streamVersion", "1.0"));
-        byte[] dump = jfr.readStream(stream);
+//        long stream = jfr.openStream(id, Collections.emptyMap());
+        // do NOT set "streamVersion" = "1.0" - this is to read data from running recording and we won't
+        // get the "null response means end of stream" - we'll be getting 0-length array instead.
+//        long stream = jfr.openStream(id, Map.of("streamVersion", "1.0"));
+        long stream = jfr.openStream(id, Collections.emptyMap());
+        ByteArrayOutputStream baos = new ByteArrayOutputStream();
+        byte[] dump;
+        while ((dump = jfr.readStream(stream)) != null) {
+            baos.write(dump);
+        }
         jfr.closeStream(stream);
         jfr.closeRecording(id);
 
-        System.out.println("dump size: " + dump.length);
+        assertTrue(baos.toByteArray().length > 0);
+    }
+
+    // ---- Tests using JFR API with Jolokia MBeanServerConnection (API and direct JMX)
+
+    @Test
+    public void remoteRecordingStreamWithJolokia() throws IOException, InterruptedException {
+        MBeanServerConnection conn = connector.getMBeanServerConnection();
+
+        try (RemoteRecordingStream rs = new RemoteRecordingStream(conn)) {
+            rs.enable("jdk.GCPhasePause").withoutThreshold();
+            rs.enable("jdk.CPULoad").withPeriod(Duration.ofSeconds(1));
+            rs.onEvent("jdk.CPULoad", System.out::println);
+            rs.onEvent("jdk.GCPhasePause", System.out::println);
+            rs.startAsync();
+            Thread.sleep(300);
+        }
     }
 
     @Test
-    public void remoteRecordingStreamWithJolokiaJMXAdapter() throws IOException {
-        String host = "localhost";
-        String url = "service:jmx:jolokia://" + host + ":" + 7778 + "/jolokia";
+    public void startDumpAndStopRecordingUsingJMXWithJolokia() throws Exception {
+        MBeanServerConnection jolokia = connector.getMBeanServerConnection();
+        MBeanInfo info = jolokia.getMBeanInfo(jfr);
 
-        JMXServiceURL u = new JMXServiceURL(url);
-        MBeanServerConnection conn;
-        try (JMXConnector c = JMXConnectorFactory.connect(u)) {
-            conn = c.getMBeanServerConnection();
-
-            try (RemoteRecordingStream rs = new RemoteRecordingStream(conn)) {
-                rs.enable("jdk.GCPhasePause").withoutThreshold();
-                rs.enable("jdk.CPULoad").withPeriod(Duration.ofSeconds(1));
-                rs.onEvent("jdk.CPULoad", System.out::println);
-                rs.onEvent("jdk.GCPhasePause", System.out::println);
-                rs.start();
-                rs.startAsync();
+        TabularType type = null;
+        for (MBeanOperationInfo op : info.getOperations()) {
+            if (op.getName().equals("openStream")) {
+                MBeanParameterInfo param1 = op.getSignature()[1];
+                if (param1 instanceof OpenMBeanParameterInfo openMBeanParameterInfo) {
+                    type = (TabularType) openMBeanParameterInfo.getOpenType();
+                    break;
+                }
             }
         }
+
+        assertNotNull(type);
+        TabularDataSupport td = new TabularDataSupport(type);
+
+        long id = (long) jolokia.invoke(jfr, "newRecording", new Object[0], new String[0]);
+        long start = Instant.now().minusSeconds(1).toEpochMilli();
+        jolokia.invoke(jfr, "startRecording", new Object[] { id }, new String[] { "long" });
+        Thread.sleep(300);
+        jolokia.invoke(jfr, "stopRecording", new Object[] { id }, new String[] { "long" });
+        long end = Instant.now().toEpochMilli();
+
+        long cloneId = (long) jolokia.invoke(jfr, "cloneRecording", new Object[] { id, true }, new String[] { "long", "boolean" });
+
+        td.put(new CompositeDataSupport(type.getRowType(), Map.of("key", "startTime", "value", Long.toString(start))));
+        long stream = (long) jolokia.invoke(jfr, "openStream", new Object[] { cloneId, td }, new String[] { "long", "javax.management.openmbean.TabularData" });
+
+        byte[] dump;
+        int size = 0;
+        while ((dump = (byte[]) jolokia.invoke(jfr, "readStream", new Object[] { stream }, new String[] { "long" })) != null) {
+            size += dump.length;
+        }
+        jolokia.invoke(jfr, "closeStream", new Object[] { stream }, new String[] { "long" });
+        jolokia.invoke(jfr, "closeRecording", new Object[] { cloneId }, new String[] { "long" });
+
+        assertTrue(size > 0);
     }
 
     @Test
-    public void remoteRecordingStreamWithJolokiaJMXAdapterAndJMXProxy() throws Exception {
-        String url = "service:jmx:jolokia://localhost:7778/jolokia";
-        JMXServiceURL u = new JMXServiceURL(url);
-        try (JMXConnector c = JMXConnectorFactory.connect(u)) {
-            MBeanServerConnection conn = c.getMBeanServerConnection();
+    public void remoteRecordingStreamWithPlatformServerAndJMXProxyWithJolokia() throws Exception {
+        MBeanServerConnection jolokia = platform;//connector.getMBeanServerConnection();
 
-            FlightRecorderMXBean jfr = JMX.newMXBeanProxy(conn, ObjectName.getInstance(FlightRecorderMXBean.MXBEAN_NAME), FlightRecorderMXBean.class);
-            long id = jfr.newRecording();
-            jfr.startRecording(id);
-            Thread.sleep(1000);
-            jfr.stopRecording(id);
-            // com.sun.jmx.mbeanserver.DefaultMXBeanMappingFactory.TabularMapping.toNonNullOpenValue() will convert
-            // a map to proper CompositeType associated with TabularType
-            // com.sun.jmx.mbeanserver.DefaultMXBeanMappingFactory.keyValueArray is ALWAYS [ "key", "value" ]
-            long stream = jfr.openStream(id, Map.of("streamVersion", "1.0"));
-            byte[] dump = jfr.readStream(stream);
-            jfr.closeStream(stream);
-            jfr.closeRecording(id);
+        FlightRecorderMXBean jfr = JMX.newMXBeanProxy(jolokia, this.jfr, FlightRecorderMXBean.class);
+        long id = jfr.newRecording();
 
-            System.out.println("dump size: " + dump.length);
+        // see https://bugs.openjdk.org/browse/JDK-8308877
+        // fixed in https://github.com/openjdk/jdk/commit/5fdb22f911b7e430bc1a621f6a39266ee2e50eda
+//        List<EventTypeInfo> eventTypes = jfr.getEventTypes();
+//        assertTrue(eventTypes != null && !eventTypes.isEmpty());
+
+        List<ConfigurationInfo> configurations = jfr.getConfigurations();
+        assertTrue(configurations != null && !configurations.isEmpty());
+
+        Map<String, String> options = jfr.getRecordingOptions(id);
+        assertNotNull(options);
+        Map<String, String> settings = jfr.getRecordingSettings(id);
+        assertNotNull(settings);
+
+        jfr.startRecording(id);
+        Thread.sleep(500);
+        jfr.stopRecording(id);
+        long stream = jfr.openStream(id, Collections.emptyMap());
+        ByteArrayOutputStream baos = new ByteArrayOutputStream();
+        byte[] dump;
+        while ((dump = jfr.readStream(stream)) != null) {
+            baos.write(dump);
         }
+        jfr.closeStream(stream);
+        jfr.closeRecording(id);
+
+        assertTrue(baos.toByteArray().length > 0);
     }
 
 }
